Bug 2070- reduce labels on small resolution

--- a/src/components/permission/admin/dialogs/inputs/permissions-form-input/style.less
+++ b/src/components/permission/admin/dialogs/inputs/permissions-form-input/style.less
@@ -17,7 +17,7 @@
             grid-gap: @margin-small;
             justify-items: center;
 
-            >span:first-child {
+            >span {
                 overflow: hidden;
                 text-overflow: ellipsis;
                 max-width: 100%;
